Fix whitespace issue on tags

--- a/_sass/_objects.scss
+++ b/_sass/_objects.scss
@@ -14,6 +14,11 @@
   }
 }
 
+.icon--tag,
+.icon--tags {
+  margin-right: 0.25em;
+}
+
 .icon--title {
   > svg {
     height: 1.25em;
